# python-image-text-overlay

./: .gitignore  Makefile  Readme.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/image_text/: __init__.py  __main__.py  config.py  logging_config.py  processor.py  ui.py
tests/: conftest.py  test_processor.py  test_ui.py
